chore: fix alignment on the dashboard pge

--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -1,7 +1,8 @@
 // App styles
 body,
 h1,
-h2 {
+h2,
+h3 {
     margin: 0;
     padding: 0;
 }
@@ -65,10 +66,18 @@ h2 {
 
     .card-buttons {
         text-align: center;
+
+        .k-button {
+            width: 105px;
+        }
     }
 
     .card-ranges {
         text-align: right;
+
+        .k-daterangepicker-wrap {
+            margin-top: -15px;
+        }
     }
 
     .card-component {
@@ -77,9 +86,6 @@ h2 {
     }
 }
 
-
-
-// Components styling
 .k-drawer-container {
   position: fixed;
   width: 100%;
@@ -91,4 +97,8 @@ h2 {
 }
 .k-drawer-item {
   user-select: none;
+}
+
+.info-page .home-page h1, body .home-page h2, body .home-page h3 {
+    font-family: Metric,Helvetica,Arial,sans-serif;
 }
