--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -11,11 +11,11 @@ h2 {
     font-weight: 200;
 }
 h3 {
-    font-size: 1.75rem;
+    font-size: 1.25rem;
     font-weight: 400;
 }
 h4 {
-    font-size: 1.75rem;
+    font-size: 1.25rem;
 }
 h5 {
     font-size: 1.25rem;
